Fixed code and tests related to commits with message updating * database queries