@@ -116,7 +116,7 @@ class PricingExplanatorTest {
 
   private Location createLocation(Application application) {
     Location location = new Location();
-    location.setArea(new Double("14.0"));
+    location.setArea(Double.valueOf("14.0"));
     location.setPaymentTariff("3");
     location.setPostalAddress(new PostalAddress("Testikatu 42", null, null));
     location.setStartTime(application.getStartTime());
